@@ -1,0 +1,4 @@
+.rst-content tt.literal, .rst-content tt.literal, .rst-content code.literal {
+    color: #404040;
+}
+
