@@ -1,4 +1,5 @@
 {% extends "!layout.html" %}
 {% block extrahead %}
     <link href="{{ pathto("_static/increased_width.css", True) }}" rel="stylesheet" type="text/css">
+    <link href="{{ pathto("_static/theme.css", True) }}" rel="stylesheet" type="text/css">
 {% endblock %}
